--- a/server/package.json
+++ b/server/package.json
@@ -6,10 +6,12 @@
     "dev": "bun run --watch src/index.ts"
   },
   "dependencies": {
+    "@elysiajs/cors": "^0.7.0",
     "elysia": "latest"
   },
   "devDependencies": {
-    "bun-types": "latest"
+    "bun-types": "latest",
+    "colors.ts": "^1.0.20"
   },
   "module": "src/index.js"
 }
