--- a/client/package.json
+++ b/client/package.json
@@ -9,15 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "20.6.0",
-    "@types/react": "18.2.21",
-    "@types/react-dom": "18.2.7",
-    "autoprefixer": "10.4.15",
-    "next": "13.4.19",
-    "postcss": "8.4.29",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-regular-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "latest",
+    "@tanstack/react-query": "^5.8.4",
+    "autoprefixer": "10.4.16",
+    "next": "14.0.2",
+    "postcss": "8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.3",
-    "typescript": "5.2.2"
+    "tailwindcss": "3.3.5"
+  },
+  "devDependencies": {
+    "typescript": "^5.2.2",
+    "@types/node": "20.9.0",
+    "@types/react": "18.2.37",
+    "@types/react-dom": "18.2.15"
   }
 }
