insignificant changes on the server, added connect method to mongodb

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -106,5 +106,7 @@
       "@schemas/*": ["./src/schemas/*"],
       "@lib/*": ["./src/lib/*"]
     }
-  }
+  },
+  "include": ["src"],
+  "exclude": ["node_modules"]
 }
