--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,9 @@
   },
   "dependencies": {
     "@elysiajs/cors": "^0.7.0",
-    "elysia": "latest"
+    "@types/mongoose": "^5.11.97",
+    "elysia": "latest",
+    "mongoose": "^8.0.1"
   },
   "devDependencies": {
     "bun-types": "latest",
